2008-01-28  Christian Persch  <chpe@gnome.org>

	* src/xstuff.c: (get_typed_property_data): Don't use
	G_GNUC_PRETTY_FUNCTION. Fixes the build with glib trunk.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* src/trash-monitor.c: Use G_DEFINE_TYPE macros. Patch from Jaap
	Haitsma, Bug #459705.

2007-10-02  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* docs/Makefile.am: Added German translation (by Tobias Höbel
	<tobsi-h@gmx.de>).
	* docs/de/de.po: Added de to DOC_LINGUAS.

2007-09-25  Gil Forcada  <gforcada@svn.gnome.org>

	* docs/ca/ca.po: Added Catalan translation.
	* docs/Makefile.am: Added ca.

2007-09-16  Jovan Naumovski  <jovan@lugola.net>

	* mk.po: Added Macedonian translation.

2007-09-04  Luca Ferretti  <elle.uca@libero.it>

	* docs/it/it.po: Updated Italian translation.
	* docs/it/figures/trash-applet.png: Updated to new default theme.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* src/trashapplet.c: (trash_applet_init), (trash_applet_destroy),
	(trash_applet_update), (trash_applet_show_about), (main):
	* src/trashapplet.h:
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145


2007-05-13  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
    
	* docs/ru/ru.po: Updated Russian translation by
	Sergey Mironov <sergo@bk.ru>

2007-02-04  Davyd Madeley  <davyd@madeley.id.au>

	* src/trash-applet.c: Listen for theme changes. Fixes #335327.
	  Patch from Jesse Stockall <jesse@cleverone.org>.

2006-12-13  Matthias Clasen <mclasen@redhat.com>

	* src/trashapplet.c: Open the window on the right screen. 
	(#382774)

2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>

	* src/trashapplet.c: (update_transfer_callback): Remove
	markup from translatable message. Patch from Elijah Newren.
	Closes bug #360447.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/trashapplet.xml: Fix build.
