@@ -1,3 +1,9 @@
+2008-02-02  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/xstuff.c: (get_typed_property_data): The previous
+	commit broke the build. Fix from Simon Holm Thøgersen.
+	Closes bug #513611.
+
 2008-01-28  Christian Persch  <chpe@gnome.org>
 
 	* src/xstuff.c: (get_typed_property_data): Don't use
